--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,115 +19,137 @@
 
 <body>
     <header class="header">
-        <nav class="header-nav">
-            <a class="header-logo link" href="./index.html">
-                Web<span class="header-studio link">Studio</span></a>
-            <ul class="header-list list">
-                <li class="header-item">
-                    <a class="header-link link" href="./index.html">Studio</a>
-                </li>
-                <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header-item">
-                    <a class="header-link link" href="">Contacts</a>
-                </li>
+        <div class="container nav-container">
+            <nav class="header-nav">
+                <a class="header-logo link" href="./index.html">
+                    Web<span class="header-studio link">Studio</span></a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="header-link link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Contacts</a>
+                    </li>
 
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="contact-list list">
-                <li class="contact-item">
-                    <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contact-item">
-                    <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="contact-list list">
+                    <li class="contact-item">
+                        <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contact-item">
+                        <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main class="main">
         <!-- Section1 -->
         <section class="section-hero">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="button-hero" type="button">Order Service</button>
+            <div class="container hero-container">
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button class="button-hero" type="button">Order Service</button>
+            </div>
         </section>
         <!-- section2 -->
         <section class="section-feature">
-            <h2 hidden class="feature-title">Feature</h2>
-            <ul class="feature-list list">
-                <li class="feature-item">
-                    <h3 class="feature-subtitle">Strategy</h3>
-                    <p class="feature-text">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li class="feature-item">
-                    <h3 class="feature-subtitle">Punctuality</h3>
-                    <p class="feature-text">Bring the key message to the brand's audience for the best price within the
-                        shortest possible
-                        time.</p>
-                </li>
-                <li class="feature-item">
-                    <h3 class="feature-subtitle">Diligence</h3>
-                    <p class="feature-text">Research and confirm brands that present the strongest digital growth
-                        opportunities and minimize
-                        risk.</p>
-                </li>
-                <li class="feature-item">
-                    <h3 class="feature-subtitle">Technologies</h3>
-                    <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
-                        passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 hidden class="feature-title">Feature</h2>
+                <ul class="feature-list list">
+                    <li class="feature-item">
+                        <h3 class="feature-subtitle">Strategy</h3>
+                        <p class="feature-text">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="feature-item">
+                        <h3 class="feature-subtitle">Punctuality</h3>
+                        <p class="feature-text">Bring the key message to the brand's audience for the best price within
+                            the
+                            shortest possible
+                            time.</p>
+                    </li>
+                    <li class="feature-item">
+                        <h3 class="feature-subtitle">Diligence</h3>
+                        <p class="feature-text">Research and confirm brands that present the strongest digital growth
+                            opportunities and minimize
+                            risk.</p>
+                    </li>
+                    <li class="feature-item">
+                        <h3 class="feature-subtitle">Technologies</h3>
+                        <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
+                            passion for
+                            problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- section3 -->
         <section class="product">
-            <h2 class="product-title">What are we doing</h2>
-            <ul class="prosuct-list list">
-                <li>
-                    <img src="./images/Rectangle1.jpg" alt="Computer" width="360">
-                </li>
-                <li>
-                    <img src="./images/Rectangle2.jpg" alt="Phone" width="360">
-                </li>
-                <li>
-                    <img src="./images/Rectangle3.jpg" alt="Phone in hand" width="360">
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="product-title">What are we doing</h2>
+                <ul class="prosuct-list list">
+                    <li>
+                        <img src="./images/Rectangle1.jpg" alt="Computer" width="360">
+                    </li>
+                    <li>
+                        <img src="./images/Rectangle2.jpg" alt="Phone" width="360">
+                    </li>
+                    <li>
+                        <img src="./images/Rectangle3.jpg" alt="Phone in hand" width="360">
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- section4 -->
         <section class="team-section">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="team-list list">
-                <li class="team-item">
-                    <img src="./images/img1.jpg" alt="Product Designer" width="264">
-                    <h3 class="team-subtitle">Mark Guerrero</h3>
-                    <p class="team-text">Product Designer</p>
+            <div class="container">
+                <h2 class="team-title">Our Team</h2>
 
-                </li>
-                <li class="team-item">
-                    <img src="./images/img2.jpg" alt="Frontend Developer" width="264">
-                    <h3 class="team-subtitle">Tom Ford</h3>
-                    <p class="team-text">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/img3.jpg" alt="Marketing" width="264">
-                    <h3 class="team-subtitle">Camila Garcia</h3>
-                    <p class="team-text">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/img4.jpg" alt="UI Designer" width="264">
-                    <h3 class="team-subtitle">Daniel Wilson</h3>
-                    <p class="team-text">UI Designer</p>
-                </li>
-            </ul>
+                <ul class="team-list list">
+                    <li class="team-item">
+                        <img src="./images/img1.jpg" alt="Product Designer" width="264">
+                        <div class="name-container">
+                            <h3 class="team-subtitle">Mark Guerrero</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/img2.jpg" alt="Frontend Developer" width="264">
+                        <div class="name-container">
+                            <h3 class="team-subtitle">Tom Ford</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/img3.jpg" alt="Marketing" width="264">
+                        <div class="name-container">
+                            <h3 class="team-subtitle">Camila Garcia</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/img4.jpg" alt="UI Designer" width="264">
+                        <div class="name-container">
+                            <h3 class="team-subtitle">Daniel Wilson</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
+        <div class="container">
+            <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+        </div>
     </footer>
 </body>
 
