--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,127 +20,149 @@
 
 <body>
     <header class="header">
-        <nav class="header-nav">
-            <a class="header-logo link" href="./index.html">
-                Web<span class="header-studio link">Studio</span></a>
-            <ul class="header-list list">
-                <li class="header-item">
-                    <a class="header-link link" href="./index.html">Studio</a>
-                </li>
-                <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header-item">
-                    <a class="header-link link" href="">Contacts</a>
-                </li>
+        <div class="container nav-container">
+            <nav class="header-nav">
+                <a class="header-logo link" href="./index.html">
+                    Web<span class="header-studio link">Studio</span></a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="header-link link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Contacts</a>
+                    </li>
 
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="contact-list list">
-                <li class="contact-item">
-                    <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contact-item">
-                    <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="contact-list list">
+                    <li class="contact-item">
+                        <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contact-item">
+                        <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section>
-            <h1 hidden>Our Works</h1>
-            <ul class="button-list list">
-                <li class="button-item">
-                    <button class="button-link" type="button">All</button>
-                </li>
-                <li class="button-item">
-                    <button class="button-link" type="button">Web Site</button>
-                </li>
-                <li class="button-item">
-                    <button class="button-link" type="button">App</button>
-                </li>
-                <li class="button-item">
-                    <button class="button-link" type="button">Design</button>
-                </li>
-                <li class="button-item">
-                    <button class="button-link" type="button">Marketing</button>
-                </li>
-            </ul>
-            <!-- Photo -->
-            <ul class="photo-list list">
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio1.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Banking App Interface Concept</h2>
-                        <p class="photo-text">App</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio2.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Cashless Payment</h2>
-                        <p class="photo-text">Marketing</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio3.jpg" alt="Photo" width="360" height="300">
-
-                        <h2 class="photo-title">Meditation App</h2>
-                        <p class="photo-text">App</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio4.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Taxi Service</h2>
-                        <p class="photo-text">Marketing</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio5.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Screen Illustrations</h2>
-                        <p class="photo-text">Design</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio6.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Online Courses</h2>
-                        <p class="photo-text">Marketing</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio7.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Instagram Stories Concept</h2>
-                        <p class="photo-text">Design</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio8.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Organic Food</h2>
-                        <p class="photo-text">Web Site</p>
-                    </a>
-                </li>
-                <li class="photo-item">
-                    <a class="photo-link link" href="">
-                        <img src="./images/portfolio9.jpg" alt="Photo" width="360" height="300">
-                        <h2 class="photo-title">Fresh Coffee</h2>
-                        <p class="photo-text">Web Site</p>
-                    </a>
-                </li>
-            </ul>
-
+        <section class="portfolio">
+            <div class="container">
+                <h1 hidden>Our Works</h1>
+                <ul class="button-list list">
+                    <li class="button-item">
+                        <button class="button-link" type="button">All</button>
+                    </li>
+                    <li class="button-item">
+                        <button class="button-link" type="button">Web Site</button>
+                    </li>
+                    <li class="button-item">
+                        <button class="button-link" type="button">App</button>
+                    </li>
+                    <li class="button-item">
+                        <button class="button-link" type="button">Design</button>
+                    </li>
+                    <li class="button-item">
+                        <button class="button-link" type="button">Marketing</button>
+                    </li>
+                </ul>
+                <!-- Photo -->
+                <ul class="photo-list list">
+                    <li class="photo-item">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio1.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Banking App Interface Concept</h2>
+                                <p class="photo-text">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio2.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Cashless Payment</h2>
+                                <p class="photo-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item no-margin-right">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio3.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Meditation App</h2>
+                                <p class="photo-text">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio4.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Taxi Service</h2>
+                                <p class="photo-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio5.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Screen Illustrations</h2>
+                                <p class="photo-text">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item no-margin-right">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio6.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Online Courses</h2>
+                                <p class="photo-text">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item no-margin-button">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio7.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Instagram Stories Concept</h2>
+                                <p class="photo-text">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item no-margin-button">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio8.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Organic Food</h2>
+                                <p class="photo-text">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="photo-item no-margin-button no-margin-right">
+                        <a class="photo-link link" href="">
+                            <img src="./images/portfolio9.jpg" alt="Photo" width="360" height="300">
+                            <div class="portfolio-container">
+                                <h2 class="photo-title">Fresh Coffee</h2>
+                                <p class="photo-text">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
+        <div class="container">
+            <a class="footer-logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+        </div>
     </footer>
 </body>
 
