--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
 <body>
     <header class="header">
-        <div class="container nav-container">
+        <div class="container nav-container border-portfolio">
             <nav class="header-nav">
                 <a class="header-logo link" href="./index.html">
                     Web<span class="header-studio link">Studio</span></a>
