--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="container nav-container border-portfolio">
+    <header class="header border-portfolio">
+        <div class="container nav-container">
             <nav class="header-nav">
                 <a class="header-logo link" href="./index.html">
                     Web<span class="header-studio link">Studio</span></a>
